infra/security_groups.tf
resource "aws_security_group" "lambda_backend" {
  name   = "${var.app_name}-lambda-backend"
  vpc_id = data.aws_vpc.default.id

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "lambda_ingest" {
  name   = "${var.app_name}-lambda-ingest"
  vpc_id = data.aws_vpc.default.id

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "rds" {
  name   = "${var.app_name}-aurora"
  vpc_id = data.aws_vpc.default.id
}

resource "aws_security_group_rule" "rds_ingress_backend" {
  type                     = "ingress"
  security_group_id        = aws_security_group.rds.id
  from_port                = 5432
  to_port                  = 5432
  protocol                 = "tcp"
  source_security_group_id = aws_security_group.lambda_backend.id
}

resource "aws_security_group_rule" "rds_ingress_ingest" {
  type                     = "ingress"
  security_group_id        = aws_security_group.rds.id
  from_port                = 5432
  to_port                  = 5432
  protocol                 = "tcp"
  source_security_group_id = aws_security_group.lambda_ingest.id
}

resource "aws_security_group" "bedrock_runtime_endpoint" {
  name   = "${var.app_name}-bedrock-runtime-endpoint"
  vpc_id = data.aws_vpc.default.id

  ingress {
    from_port       = 443
    to_port         = 443
    protocol        = "tcp"
    security_groups = [aws_security_group.lambda_backend.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
